# rugby-pymc

./: .gitignore  Makefile  PLAN.md  README.md  export_dashboard_data.py  pyproject.toml  train_model.py  update_with_new_data.py
.github/workflows/: deploy-dashboard.yml  train-model-weekly.yml
dashboard/: README.md  index.html
dashboard/css/: dashboard.css
dashboard/js/: dashboard.js  rugby_charts.js
examples/: bracket_prediction_example.py
notebooks/: 01_data_exploration.ipynb  02_model_fitting.ipynb  02_model_fitting.ipynb.backup  03_predictions.ipynb  04_defensive_effects_demo.ipynb  05_time_varying_effects.ipynb  06_league_table_and_season_prediction.ipynb  06_league_table_and_season_prediction_streamlined.ipynb  07_paths_to_victory_demo.ipynb  08_squad_analysis_demo.ipynb  09_validation_and_diagnostics.ipynb  09_validation_and_diagnostics.py  10_data_quality_validation.ipynb  10_data_quality_validation.py  MODERNIZATION_PLAN.md  README.md
rugby_ranking/: __init__.py  cli.py  notebook_utils.py
rugby_ranking/model/: __init__.py  bracket.py  bracket_predictor.py  core.py  data.py  data_utils.py  data_validation.py  inference.py  knockout_forecast.py  positions.py  (+10 more)
tests/: export_dashboard_data.py  show_threshold_impact.py  test_bracket.py  test_core_model.py  test_data_loading.py  test_data_validation.py  test_defensive_minibatch.py  test_league_table.py  test_paths_to_victory.py  test_ranking_changes.py  test_season_predictor.py  test_separate_effects.py  test_squad_analysis_phase5.py  test_time_varying.py  test_validation.py  validate_notebook_fixes.py
(+7 files in other folders)
